src/components/contact/Contact.css
.contact {
  height: 100vh;
}

.contact__header {
  /* width: auto; */
  color: var(--baby-blue);
  font-size: clamp(3rem, 8vw, 4rem);
}

h4::after {
  background-color: var(--baby-blue);
  content: '';
  display: inline-block;
  height: 1px;
  position: relative;
  vertical-align: middle;
  width: calc(75vw - 200px);
  left: 0.5em;
  margin-right: -50%;
}

.contact__container {
  display: flex;
  gap: 3rem;
  flex-wrap: wrap;
  flex-direction: column;
}

.contact__p-container > p {
  font-size: clamp(0.75rem, 5vw, 1.5rem);
  width: 50vw;
  margin-block-end: 0;
  color: var(--blue-grotto);
}

.contact__button-container {
  display: flex;
  height: var(--header-height);
}

.contact__button {
  font-size: clamp(1.25rem, 5vw, 2.5rem);
  color: var(--baby-blue);
  cursor: pointer;
  user-select: none;
  border-bottom: clamp(0.2rem, 5vw, 0.3rem) solid var(--blue-green);

  margin: 0 0.5em;
  transition: margin-top 80ms ease-out 80ms;
}

.contact__button:hover {
  margin-top: 0.25em;
}

